# markpickle

./: .gitignore  .markdownlintrc  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  build_docs.sh  create_examples.py  create_examples_by_file.py  create_examples_read_back_in.py  create_examples_read_back_in_native.py  create_wild_examples.py  justfile  mkdocs.yml  package-lock.json  package.json  pyproject.toml  quick_build.sh  read_readme.py  setup.py  test_serialize.py  tiny.md  tox.ini
.claude/: settings.local.json
.github/workflows/: build.yml  publish_to_pypi.yml  tox.yml
.obsidian/: workspace.json
changelog.d/: 20230318_203157_matthewdeanmartin.md
dead_code/: deserialized_third_party.py  pyproject.toml.org
dead_code/mistune_plugins/: meta.py  rex.py
docs/: CHANGELOG.md  CODE_QUALITY_PLAN.md  COMPAT_TESTS.md  Markpickle_Tutorial.ipynb  Markpickle_Tutorial_Executed.ipynb  README_Tutorial.md  TODO.md  choosing_a_library.md  cli.md  configuration.md  contributing_humans.md  contributing_llms.md  conversion_grid.md  credits.md  examples.md  getting_started.md  how_it_works.md  import_markdown.md  index.md  limitations.md  old_examples.md  pre_release_checklist.md  schema_ideas  schema_ideas.py  stackoverflow.md
docs/individual/: binary.md  books_multi.md  dictionaries of binary.md  dictionaries of strings.md  dictionary of dictionaries.md  dictionary of dictionaries_formatted.md  dictionary of lists.md  list of binary.md  list of dictionaries.md  list of dictionaries_formatted.md  list of scalars.md  two dictionary documents_multi.md  two dictionary documents_multi_formated.md  two scalar documents_multi.md  two scalar documents_multi_formated.md
markmodule/: class_source.py  data.md  hello_module.md  hello_module.pyi  import_string.py  md_module_support.py  script.md  template.md
markpickle/: __about__.py  __init__.py  __main__.py  _markpickle.pyi  _rust_speedups.py  atx_as_dictionary.py  binary_streams.py  cli.py  config_class.py  config_file.py  deserialize.py  dom_deserialize.py  import_string.py  meta.py  mypy_types.py  python_to_tables.py  serialize.py  simplify_types.py  split_file_code.py  sugar.py  third_party_tables.py  tool.py  unicode_formatting.py  unicode_text.py  validate.py
markpickle/gui/: __init__.py  app.py  configstate.py  docstate.py  randgen.py  theme.py
markpickle/gui/panels/: __init__.py  config_panel.py  convert.py  doctor_panel.py  format_panel.py  help_panel.py  validate_panel.py
naive_examples/: code_block.md  empty_header.md  just_code.md  links.md  mixed_content.md  nested_lists.md  readme_style.md  recipe.md  simple_header.md  simple_list.md  simple_table.md  todo_list.md
sample_module/: Makefile  README.md
sample_module/markdown_tests/: test_docstring_style.md  test_hello.md
sample_module/sample_module/: hello_module.md
sample_module/test/: test_labeled.md
scripts/: add_future_annotations.py  generate_v1_compat_fixtures.py  go.py  random_html_to_markdown_to_py.py
spec/: CODE_QUALITY_PLAN.md  PHASES.md  PROPOSALS.md  ROADMAP.md  known_limitations.py  tkinter.md
src/: lib.rs
test/: examples_of_supported_types.py  test_benchmark.py  test_books_scenario.py  test_cli_main.py  test_config_file.py  test_current_behavior.py  test_deserialize_happy_paths.py  test_dom_deserialize.py  test_format.py  test_gui_app.py  test_gui_panels.py  test_gui_state.py  test_hypothesis_roundtrip.py  test_python_to_tables_optional.py  test_randgen.py  test_round_trip_cases.py  test_serialize_happy_paths.py  test_todo_validation.py  test_tool.py  test_validate.py  tox_banner.py  utils.py
test/compat/: __init__.py  helpers.py  test_behavior_v1.py  test_documented_v2_changes.py  test_public_api_v1.py
test/compat/fixtures/v1_6_4/: api_snapshot.json  behavior_snapshot.json  documented_changes.json
test/test_deserialize/: test_atx_nested_dicts.py  test_bytes.py  test_complex_dict.py  test_complex_nested.py  test_dict_as_definition_lists.py  test_dicts_as_nested_lists.py  test_dicts_as_tables.py  test_empty_header.py  test_helpers.py  test_multi_doc.py  test_read_many_files.py  test_reader.py  test_scalars.py  test_simple_dict.py  test_simple_lists.py  test_wild_files.py  test_wild_so_question.py
test/test_deserialize/markdown_to_json_examples/: chinese.py  complicated.py  from_readme.py  issue_10.py  list.py  list2.py  readme_example.py  same.py  simple.py
test/test_deserialize/markdown_to_json_examples/mixed/: bad_nest.py  issue_4.py  issue_8.py  issue_8_part2.py
test/test_serialize/: example_types.py  test_classes.py  test_complex.py  test_files.py  test_python_to_tables.py  test_scalars.py  test_simple_classes.py  test_simple_dict.py  test_simple_lists.py  test_simplify_types.py  test_wild_so_questions.py
test/test_stable_hypothesis/: test_deserialize.py  test_hypothesis.py  test_python_to_tables.py  test_serialize.py  test_simplify_types.py  test_third_party_tables.py
test_hypothesis/: test_format.py  test_hypothesis.py  test_not_stable.py  test_slow.py
